feat: Almost done!

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,23 @@
+button {
+  all: unset;
+  cursor: pointer;
+  display: inline-block;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.padding-wrapper {
+    padding-left: 24px;
+    padding-right: 24px;
+}
+
 /* Хедер */
 
 .header {
     display: grid;
     grid-template-columns: 1fr min-content 1fr;
     align-items: center;
+    padding: 92px 50px 96px 50px;
+    font-size: 18px;
 }
 
 .header__logo {
@@ -26,6 +40,12 @@
     max-width: 240px;
     display: flex;
     flex-direction: column;
+    font-style: normal;
+}
+
+.address a {
+    align-items: flex-start;
+    line-height: 24px;
 }
 
 .header__link {
@@ -38,6 +58,7 @@
 
 /* Основной контент */
 
+/* Обложка */
 .cover {
     position: relative;
     background-image: url('../images/cover.jpg');
@@ -47,10 +68,21 @@
     min-height: 757px;
     color: #FFF;
     text-transform: uppercase;
+    margin-bottom: 180px;
 }
 
 .cover__title {
-    
+    font-size: 100px;
+    line-height: 115px;
+    letter-spacing: 30%;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.cover__description {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .cover__description-text {
@@ -60,3 +92,178 @@
 .overlay {
     position: absolute;
 }
+
+button:focus {
+    outline: none;
+}
+
+.bet-button {
+    border: 1px solid #FFF;
+    padding: 12px 32px;
+}
+
+/* Карточки */
+.lots {
+    margin-bottom: 120px;
+}
+
+.lots__heading {
+    margin-left: 40px;
+    margin-bottom: 27px;
+    font-size: 40px;
+    text-transform: uppercase;
+}
+
+ul.lots__card-list li {
+    list-style: none;
+    width: 334px;
+    height: 596px;
+}
+
+.lots__card-list {
+    display: flex;
+    gap: 25px;
+    flex-wrap: wrap;
+}
+
+.lots__card-list-item {
+    height: 100%;
+}
+
+.card-link {
+    height: 100%;
+    text-decoration: none;
+    display: flex;
+}
+
+.card {
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 30px;
+    color: #FFF;
+    padding: 48px 40px;
+}
+
+.card__title {
+    text-decoration: underline;
+    font-size: 22px;
+    text-transform: uppercase;
+    line-height: 120%;
+}
+
+.card__text {
+    font-size: 20px;
+    line-height: 120%;
+}
+
+.card_type_film {
+    background-image: url('../images/card-lot-01.jpg');
+}
+
+.card_type_book {
+    background-image: url('../images/card-lot-02.jpg');
+}
+
+.card_type_picture {
+    background-image: url('../images/card-lot-03.jpg');
+}
+
+.lots__look-more-link {
+    display: block;
+    margin-top: 30px;
+    margin-left: 40px;
+    font-size: 20px;
+}
+
+/* Об аукционе */
+.about {
+    display: grid;
+    grid-template-columns: 287px 1fr;
+    margin-bottom: 180px;
+    gap: 72px;
+}
+
+.about__logo {
+    width: 240px;
+    height: 240px;
+    background-color: black;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.column-logo {
+    padding: 35px 0 0 47px;
+}
+
+.about__logo-image {
+    width: 148px;
+    height: 114px;
+}
+
+.about__title {
+    padding: 136px 0 100px 0;
+    font-size: 40px;
+    text-transform: uppercase;
+}
+
+.text-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+.about__text {
+    font-size: 20px;
+    line-height: 24px;
+}
+
+/* Футер */
+
+.footer {
+    font-size: 18px;
+    display: grid;
+    grid-template-columns: 265px 164px 240px;
+    align-items: start;
+    justify-content: space-between;
+    padding: 0 50px 82px 50px;
+}
+
+.footer__address {
+    max-width: 265px;
+}
+
+.footer__menu-list {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.footer__menu-link_active {
+    text-decoration: none;
+}
+
+.footer__social-list {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer__social-icon {
+    width: 48px;
+    height: 48px;
+}
+
+.footer__social-list-item,
+.footer__menu-list-item {
+    list-style: none;
+}
+
+.no-decoration {
+    text-decoration: none;
+}
+
